--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "node": ">=10.12"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
+    "jest": "^24.0.0",
+    "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "typescript": "^3.2.4"
   },
