--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "esModuleInterop": true,
     "baseUrl": "./",
     "types": [
-      "node"
+      "node",
+      "jest"
     ],
     "typeRoots": ["node_modules/@types"],
     "paths": {
@@ -38,7 +39,4 @@
     "jest",
     "@src/setupTests.ts"
   ],
-  "types": [
-    "typePatches"
-  ]
 }
